[project]
name = "arctic-incr-cache"
version = "0.1.12"
description = "ArcticDB-backed time series cache with incremental updates — fetch once, upsert the gap."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["arcticdb", "cache", "time-series", "incremental", "pandas"]
dependencies = [
    "arcticdb>=6.5.0",
    "pandas>=2.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/wy-z/arctic-incr-cache"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arctic_incr_cache"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.6.4",
    "isort>=5.13.2",
    "pytest-mock>=3.14.0",
    "pyright>=1.1.407",
    "pandas-stubs>=2.3.3.251219",
    "pytest-bdd>=8.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "ARG"]
